<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android1="http://schemas.android.com/apk/res/android"
    >
    <item
        android1:id="@+id/action_search"
        android1:actionViewClass="android.widget.SearchView"
        android1:icon="@mipmap/actionbar_search_icon"
        android1:title="@string/action_search"
        android1:showAsAction="ifRoom|collapseActionView" />
    <item
        android1:id="@+id/action_add"
        android1:icon="@mipmap/actionbar_add_icon"
        android1:title="@string/action_add" />
    <item
        android1:id="@+id/menu_groud_chat"
        android1:icon="@mipmap/menu_group_chat_icon"
        android1:title="@string/menu_group_chat" />
    <item
        android1:id="@+id/menu_addfriend"
        android1:icon="@mipmap/menu_add_icon"
        android1:title="@string/menu_addfriend" />
    <item
        android1:id="@+id/menu_scan"
        android1:icon="@mipmap/men_scan_icon"
        android1:title="@string/menu_scan" />
    <item
        android1:id="@+id/menu_feedback"
        android1:icon="@mipmap/menu_feedback_icon"
        android1:title="@string/menu_feedback" />
</menu>