<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mym="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/ViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.mym.weixin.ChangerColorIconWithText
            android:id="@+id/Icon_indicator_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            mym:color="#3dd409"
            mym:icon="@mipmap/ic_menu_start_conversation"
            mym:text="@string/app_name"
            mym:text_size="12sp" />

        <com.mym.weixin.ChangerColorIconWithText
            android:id="@+id/Icon_indicator_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            mym:color="#3dd409"
            mym:icon="@mipmap/ic_menu_friendslist"
            mym:text="@string/tab_contact"
            mym:text_size="12sp" />

        <com.mym.weixin.ChangerColorIconWithText
            android:id="@+id/Icon_indicator_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            mym:color="#3dd409"
            mym:icon="@mipmap/ic_menu_emoticons"
            mym:text="@string/tab_found"
            mym:text_size="12sp" />

        <com.mym.weixin.ChangerColorIconWithText
            android:id="@+id/Icon_indicator_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            mym:color="#3dd409"
            mym:icon="@mipmap/ic_menu_allfriends"
            mym:text="@string/tab_me"
            mym:text_size="12sp" />
    </LinearLayout>
</LinearLayout>
